# personal-intent-engine

./: .gitignore  AGENTS.md  BRAINSTORM_V2_ROADMAP.md  BRAINSTORM_V3_AUTOLEARN_BYOK.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  REVIEW.md
.cargo/: config.toml
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CODE_REVIEW.md  COPY_THESE_PATTERNS.md  DEVLOG.md  FULL_SKILLS_AUDIT.md  IMPLEMENTATION_GUIDE.md  RELEASING.md  signing.md
docs/superpowers/plans/: 2026-07-15-distribution.md  2026-07-15-transcription-history.md  2026-07-16-codebase-independence.md  2026-07-23-perf-and-ui-polish.md  2026-07-23-pronunciation-corrector.md
docs/superpowers/specs/: 2026-07-15-transcription-history-design.md  2026-07-23-perf-and-ui-polish-design.md  2026-07-23-pronunciation-corrector-design.md
scripts/: install.sh
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  models.rs  nspanel.rs  overlay.rs  paste.rs  settings.rs
src/audio/: mod.rs  recorder.rs  resampler.rs  silero.rs  silero_vad_engine.rs  vad.rs  vad_cache.rs
src/corrector/: dictionary.rs  llm_correct.rs  mod.rs  phonetic.rs  static_seed.rs  tech_terms.json
src/history/: mod.rs
src/intent/: classifier.rs  extractor.rs  mod.rs  schema.rs
src/llm/: mod.rs  openai.rs  router.rs
src/memory/: mod.rs  patterns.rs  profile.rs  store.rs
src/optimizer/: adaptive.rs  balanced.rs  compact.rs  enhanced.rs  mod.rs
src/pipeline/: engine.rs
src/stt/: mod.rs  stream.rs  whisper.rs
tests/: corrector_pipeline.rs  silero_vad.rs  voice_pipeline.rs
ui/: index.html  overlay.html  package-lock.json  package.json  vite.config.js
ui/src/: App.svelte  Overlay.svelte  app.css  overlay.js
ui/src/lib/: HistorySettings.svelte  HistoryView.svelte  HotkeyRecorder.svelte  ModelManager.svelte  OutputSettings.svelte  RecordingView.svelte  TranscriptionSettings.svelte  VocabularySettings.svelte  keycaps.js
