[workspace]
members = ["src-tauri"]

[package]
name = "pie-engine"
version = "0.1.0"
edition = "2021"
description = "PIE - Personal Intent Engine: Intelligent middleware between humans and AI models"
license = "Apache-2.0"
repository = "https://github.com/abhishek-data/personal-intent-engine"
authors = ["Abhishek Kumar"]

[lib]
name = "pie_engine"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "pie-cli"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
# Audio capture
cpal = "0.16"
rubato = "0.16"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (for LLM API calls)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"], optional = true }

# File-based storage
dirs = "6"

# UUID for memory entries
uuid = { version = "1", features = ["v4"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# ONNX runtime for Silero VAD (optional, feature-gated)
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false, optional = true }

# WAV file reading for the CLI's --audio-file input (whisper feature only)
hound = { version = "3", optional = true }

# whisper.cpp bindings per platform (optional, feature-gated). Metal on macOS,
# plain CPU elsewhere — mirrors Handy's per-target backend selection.
[target.'cfg(target_os = "macos")'.dependencies]
transcribe-cpp = { version = "0.1.3", default-features = false, features = ["metal"], optional = true }

[target.'cfg(not(target_os = "macos"))'.dependencies]
transcribe-cpp = { version = "0.1.3", default-features = false, optional = true }

[features]
default = ["cli"]
cli = ["dep:clap"]
whisper = ["dep:transcribe-cpp", "dep:hound"]
vad = ["dep:vad-rs"]

[profile.release]
opt-level = 3
lto = true
