[workspace]
members = ["src-tauri"]

[package]
name = "pie-engine"
version = "0.1.0"
edition = "2021"
description = "PIE - Personal Intent Engine: Intelligent middleware between humans and AI models"
license = "Apache-2.0"
repository = "https://github.com/abhishek-data/personal-intent-engine"
authors = ["Abhishek Kumar"]

[lib]
name = "pie_engine"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "pie-cli"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
# Audio capture
cpal = "0.16"
rubato = "0.16"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["sync", "fs", "io-util", "rt-multi-thread", "macros"] }

# HTTP client (for LLM API calls)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"], optional = true }

# File-based storage
dirs = "6"

# Local SQLite store for transcription history (bundled = no system dep).
rusqlite = { version = "0.32", features = ["bundled"] }

# ONNX runtime + ndarray for the vendored Silero VAD engine (see
# src/audio/silero_vad_engine.rs). Optional, feature-gated.
ort = { version = "=2.0.0-rc.12", optional = true }
ndarray = { version = "0.17", optional = true }

# WAV file reading for the CLI's --audio-file input (whisper feature only)
hound = { version = "3", optional = true }

# whisper.cpp bindings per platform (optional, feature-gated). Platform-specific
# backend: Metal on macOS, CPU elsewhere.
[target.'cfg(target_os = "macos")'.dependencies]
transcribe-cpp = { version = "0.1.3", default-features = false, features = ["metal"], optional = true }

[target.'cfg(not(target_os = "macos"))'.dependencies]
transcribe-cpp = { version = "0.1.3", default-features = false, optional = true }

[features]
default = ["cli"]
cli = ["dep:clap"]
whisper = ["dep:transcribe-cpp", "dep:hound"]
vad = ["dep:ort", "dep:ndarray"]

[profile.release]
opt-level = 3
lto = true
