[package]
name = "pie-desktop"
version = "0.1.4"
edition = "2021"
description = "PIE desktop app (Tauri)"
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tray-icon: system tray; macos-private-api: transparent overlay window.
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
enigo = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
dirs = "6"
tokio = { version = "1", features = ["sync", "fs", "io-util", "rt-multi-thread"] }
# Streaming model downloads with progress.
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
futures-util = "0.3"

# The engine does the actual work; the app is a thin shell over it.
# default-features = false drops the CLI-only clap dependency.
pie-engine = { path = "..", default-features = false, features = ["whisper", "vad"] }

# macOS: the recording overlay must float over other apps without stealing
# focus (a plain always-on-top window either won't show or grabs focus and
# breaks paste). NSPanel with a non-activating style is the reliable path.
[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
